Fixed word wrapping on newline field

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,6 +65,7 @@ div#newline {
   margin-bottom: .5em;
   min-height: 2em;
   display:block;
+  word-wrap: break-word;
   border-bottom: 1px solid;
 }
  
